18Jan23=======================================================================
1. Make sure than *every* channel has an IP address. Thank you (I think) Kin 
   for pointing out that PC92 A records were not going out with IP addresses.
   I'm guessing that other things (like spots) had a similar problem. 
15Jan23=======================================================================
1. Fix strange errors for carp on missing route_*_cache files on startup.
14Jan23=======================================================================
1. Fixed route PC11 promotions so that a new PC61 is actually generated and 
   also sent instead of the original PC11 (to PC61 capable nodes).
13Jan23=======================================================================
1. Periodically store Routing tables and, if they are young enough (def: 3hrs)
   autotically restore them on restart of the node. This will short circuit
   the need to rebuild the routing tables from scratch on every restart - 
   which is normally for something like software update. 
2. Fix pc11 debugging stats with the correct figures. Sigh... Also move some
   of the totals to a different place.
3. Add show/spotstats command which gives the current spot statistics shown
   during pc11 debugging (which means you don't need to set/deb pc11 unless
   you really want that extra noise).
12Jan23=======================================================================
1. Regularise 'set/debug pc11' output to track all the routes through PC11 and
   PC61 processing and statistics.
11Jan23=======================================================================
1. Improve (?) the PC11 -> PC61 upgrading process that delays incoming PC11s
   for a very short time in the hope that a PC61 will come in to be used 
   instead. It will also upgrade a PC11 if we have an uptodate IP address 
   that has come in from the routing system PC92s. do a 'set/debug pc11' to 
   see it in action.   